# protobuf-cpp

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json.in
cmake/: SetVersion.cmake
proto/device_irs/: customer.proto
resource/: .customers.proto
source/: main.cpp
